[gd_scene load_steps=5 format=3 uid="uid://cb7itvxlwump4"]

[ext_resource type="Script" path="res://Langdocs/prog_52a.gd" id="1_bhld6"]
[ext_resource type="Theme" uid="uid://dvogokap6qe1c" path="res://LargeFont.tres" id="2_jv4ys"]

[sub_resource type="LabelSettings" id="LabelSettings_dg14d"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_b3yyo"]
font_size = 40

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhld6")

[node name="lblLength" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 457.0
offset_bottom = 175.0
text = "Length:"
label_settings = SubResource("LabelSettings_dg14d")

[node name="lblWidth" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 167.0
offset_right = 466.0
offset_bottom = 315.0
text = "Width:
"
label_settings = SubResource("LabelSettings_dg14d")

[node name="lblArea" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.096
anchor_bottom = 0.465
offset_left = 32.0
offset_top = 309.0
offset_right = 1022.41
offset_bottom = 167.68
text = "Area:"
label_settings = SubResource("LabelSettings_b3yyo")

[node name="lblPerimeter" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.096
anchor_bottom = 0.465
offset_left = 34.0
offset_top = 467.0
offset_right = 1024.41
offset_bottom = 325.68
text = "Perimiter:"
label_settings = SubResource("LabelSettings_b3yyo")

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 13.0
offset_right = 907.0
offset_bottom = 119.0

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 147.0
offset_right = 907.0
offset_bottom = 253.0

[node name="CalculateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 532.0
offset_right = 782.0
offset_bottom = 636.0
theme = ExtResource("2_jv4ys")
text = "Calculate"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 986.0
offset_top = 8.0
offset_right = 1139.0
offset_bottom = 112.0
theme = ExtResource("2_jv4ys")
text = "EXIT
"

[node name="ClearButton" type="Button" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 532.0
offset_right = 1140.0
offset_bottom = 636.0
theme = ExtResource("2_jv4ys")
text = "Clear
"

[connection signal="pressed" from="CalculateButton" to="." method="_on_calculate_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
